# metis

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
data/: README.md  datasets_readme.txt  diabetes.tab.txt
demos/: DTreeDemo.h  DemoLinearRegression.h  DemoLogisticRegression.h  DemoNaiveBayes.h  DemosMetis.h  KMeansDemoFrogs.h  KMeansDemoIris.h  LinRegDemo.h  LogRegDemoBanknotes.h  LogRegDemoIris.h  LogRegDemoMNIST.h  MLPDemoIris.h  MLPDemoMNIST.h  MetisDemos.h  NBGaussianDemo.h  NBMultinomialDemo.h
documents/: README.md
include/: DTNode.h  DataContainer.h  DataLabeled.h  DataSet.h  DecisionTree.h  GaussianNB.h  GaussianNaiveBayes.h  KMeans.h  LinearRegression.h  LinearRegressionNew.cpp  LinearRegressionNew.h  LogisticRegression.h  LogisticRegressionNew.cpp  LogisticRegressionNew.h  MLPClassifier.h  MultinomialNB.h  MultinomialNaiveBayes.h  NaiveBayes.h  ToyDataSets.h
src/: DTNode.cpp  DataContainer.cpp  DataLabeled.cpp  DataSet.cpp  DecisionTree.cpp  GaussianNB.cpp  GaussianNaiveBayes.cpp  KMeans.cpp  LinearRegression.cpp  LinearRegressionNew.cpp  LogisticRegression.cpp  LogisticRegressionNew.cpp  MLPClassifier.cpp  MultinomialNB.cpp  MultinomialNaiveBayes.cpp  NaiveBayes.cpp  ToyDataSets.cpp
src/core/: Classifier.cpp  Classifier.h  GaussianDistribution.cpp  GaussianDistribution.h  Optimizer.cpp  Optimizer.h  Predictor.cpp  Predictor.h  Regressor.cpp  Regressor.h
src/probabilities/: BayesianModel.cpp  BayesianModel.h  Frequency.cpp  Frequency.h  GaussianDistribution.cpp  GaussianDistribution.h  Probability.cpp  Probability.h
